# MARK-DEFINITIVO-EN-MAYO

./: .gitignore  CREDENCIALES_RENDER_COMPLETAS.md  CURSOR_DEVELOPMENT.md  ESTRUCTURA.md  LICENSE  Procfile  README.md  cascade-automation.js  claude-integration.js  create_patient_admin.py  create_patient_direct.py  cursor_setup.sh  install_supabase_deps.ps1  install_supabase_deps.sh  main.py  middleware.js  package-lock.json  package.json  pyproject.toml  pytest.ini  render.yaml  render.yaml.OLD  requirements.txt  reset_admin_password.py  ruff.toml  script_test_webhook.py  setup.py  setup.sh  setup_cursor.sh  test-claude.js  test_supabase.py  test_supabase_api.py  test_supabase_connection.py  test_whatsapp_connection.py
Documentation Mark Guide/: 00_documentation_index.md  00_table_of_contents.md  01_project_overview.md  02_installation_setup.md  03_admin_panel_guide.md  04_api_documentation.md  05_security_guide.md  06_customization_guide.md  07_troubleshooting_guide.md  08_voice_integration_guide.md  09_render_deployment_guide.md  README.md
admin/: __init__.py  admin_panel.py  dashboard_analytics.py
ai/: __init__.py  language_detection.py  language_detection_ml.py  language_utils.py
backend/: __init__.py  api_server.py
config/: voice.yaml
core/: __init__.py  config.py  router.py  security_utils.py
database/: __init__.py  check_citas_fields.py  check_tables.py  create_schema.py  d1_client.py  schema.py  sqlalchemy_client.py  supabase_client.py
docs/: admin_panel.md  api.md  cursor-development-guide.md  deployment.md  installation.md  playbooks.md  security.md  security_improvements.md  supabase_troubleshooting.md
examples/: supabase-client-component.jsx  supabase-todo.jsx  supabase_integration.py
i18n/: README.md  __init__.py  ar.py  ca.py  en.py  es.py  messages.py
scripts/: backup_database.py  backup_database_api.py  (+3 more)
(+71 files in other folders)
